syntax = "proto3";

package rpc;
option go_package = "github.com/dnsge/go-cache-cache/rpc;rpc";

service TwitchCache {
  rpc GetUsersAndGames(UsersAndGamesParams) returns (UsersAndGames);
  rpc GetUsers(MultiQuery) returns (Users);
  rpc GetGames(MultiQuery) returns (Games);
  rpc GetStreams(MultiQuery) returns (Streams);
  rpc SearchChannels(ChannelSearchQuery) returns (Channels);
  rpc GetStatus(StatusParams) returns (Status);
}

message UsersAndGamesParams {
  repeated string UserIDs = 1;
  repeated string GameIDs = 2;
}

message UsersAndGames {
  Users Users = 1;
  Games Games = 2;
}

message User {
  string ID = 1;
  string Login = 2;
  string DisplayName = 3;
  string Description = 4;
  string ProfileImageURL = 5;
}

message Game {
  string ID = 1;
  string Name = 2;
  string BoxArtURL = 3;
}

message Stream {
  string ID = 1;
  string UserID = 2;
  string UserName = 3;
  string GameID = 4;
  string Title = 5;
}

message Channel {
  string ID = 1;
  string DisplayName = 2;
  string Title = 3;
  string ThumbnailURL = 4;
  bool IsLive = 5;
}

message MultiQuery {
  repeated string IDs = 1;
  repeated string Names = 2;
}

message ChannelSearchQuery {
  string Name = 1;
  bool LiveOnly = 2;
}

message Users {
  repeated User Users = 1;
}

message Games {
  repeated Game Games = 1;
}

message Streams {
  repeated Stream Streams = 1;
}

message Channels {
  repeated Channel Channels = 1;
}

message StatusParams{}

message Status {
  uint64 Alloc = 1;
  uint64 Sys = 2;
  uint32 NumGC = 3;
  uint32 CacheSize = 4;
}
